crianda a funcão para adcionar tarefas

--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
       <input type="text" placeholder="Digite uma tarefa?" />
       <button>Registrar</button>
 
-      <ul>
-        <li>
-          <a href="#"></a>
-        </li>
-      </ul>
+      <ul></ul>
     </div>
 
-    <script src="script"></script>
+    <script src="script.js"></script>
   </body>
 </html>
